[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/ArcadeFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Utility/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Audio/Music/music-alexandr-zhelanov.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.317647, 0.0901961, 0.454902, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.133333, 0.0352941, 0.192157, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.196078, 0.0470588, 0.286275, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.976471, 0.294118, 0.294118, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.470588, 0.0117647, 0.0117647, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.831373, 0.0392157, 0.0156863, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=9]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 3 )
mainGameScene = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1.0
margin_right = 1023.0
margin_bottom = 600.0
color = Color( 0.294118, 0.0352941, 0.423529, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_right = 974.0
margin_bottom = 575.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 924.0
margin_bottom = 285.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Cosmic Crusade"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 289.0
margin_right = 924.0
margin_bottom = 575.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 924.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 50.0
margin_right = 874.0
margin_bottom = 138.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "New Game"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_top = 98.0
margin_right = 924.0
margin_bottom = 187.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 50.0
margin_right = 874.0
margin_bottom = 89.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Options"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 924.0
margin_bottom = 286.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 50.0
margin_right = 874.0
margin_bottom = 138.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Credits"

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
bus = "Music"

[node name="Credits" type="ColorRect" parent="."]
visible = false
margin_left = -1.0
margin_right = 1023.0
margin_bottom = 600.0
color = Color( 0.294118, 0.0352941, 0.423529, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="header" type="Label" parent="Credits"]
margin_left = 6.0
margin_top = -1.0
margin_right = 1019.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Created By:  Sam Adams"
align = 1
valign = 1
autowrap = true

[node name="body" type="Label" parent="Credits"]
margin_left = 80.0
margin_top = 181.0
margin_right = 927.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
text = "With help from Mike Mack, Jackson Bair, and Mahmoud Nasereddin."
align = 1
valign = 1
autowrap = true

[node name="body2" type="Label" parent="Credits"]
margin_left = 191.0
margin_top = 281.0
margin_right = 845.0
margin_bottom = 470.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 11 )
text = "Music from Alexandr Zhelanov, and Defekt Machine."
align = 1
valign = 1
autowrap = true

[node name="backButton" type="Button" parent="Credits"]
anchor_left = -0.670902
anchor_top = 1.57833
anchor_right = -0.604496
anchor_bottom = 1.60166
margin_left = 696.003
margin_top = -405.996
margin_right = 734.004
margin_bottom = -369.996
rect_clip_content = true
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="x" type="Label" parent="Credits/backButton"]
anchor_left = -4.26044
anchor_top = -1.30314
anchor_right = -2.78218
anchor_bottom = -1.30314
margin_left = 407.607
margin_top = 76.1569
margin_right = 449.607
margin_bottom = 118.157
custom_fonts/font = SubResource( 9 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Credits/backButton" to="." method="_on_backButton_pressed"]
